0028439: Configuration - compilation error when using thread_local within XCode 7 or earlier

__has_feature(cxx_thread_local) check has been added
for using thread_local keyword within CLang.